Issue #3279892 by corneboele: Breadcrumb items without links are invisible

--- a/styles/base/_table.scss
+++ b/styles/base/_table.scss
@@ -42,7 +42,6 @@ table {
 
   th {
     background: var(--colorGinTableHeader);
-    box-shadow: var(--ginShadowLevel1);
 
     &, .form-item__label {
       color: var(--colorGinPrimaryActive);
