--- a/styles/components/breadcrumb.scss
+++ b/styles/components/breadcrumb.scss
@@ -19,7 +19,8 @@
   }
 
   &__item,
-  &__link {
+  &__link,
+  &__text {
     display: inline;
     font-weight: normal;
     color: var(--colorGinTextLight);
@@ -65,7 +66,8 @@
     }
   }
 
-  &__link {
+  &__link,
+  &__text {
     font-size: var(--ginFontSizeSmall);
     line-height: 2; // make sure we have enough room for focus ring
     border-radius: var(--ginBorderTiny);
@@ -75,14 +77,18 @@
         font-weight: normal;
         color: var(--colorGinTextLight);
       }
-
-      &:hover {
-        color: var(--colorGinPrimaryHover);
-      }
     }
 
     em {
       font-style: italic;
+    }
+  }
+
+  &__link {
+    &, em {
+      &:hover {
+        color: var(--colorGinPrimaryHover);
+      }
     }
   }
 }
